# rtcrs

./: Cargo.toml  LICENSE  README.md
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
ice/: Cargo.toml
ice/src/: lib.rs
sdp/: Cargo.toml
sdp/src/: attribute.rs  bandwidth.rs  connection.rs  email_address.rs  encryption_key.rs  lib.rs  media_description.rs  origin.rs  phone_number.rs  session_description.rs  session_information.rs  session_name.rs  time_description.rs  time_zone.rs  uri.rs  version.rs
simplified-enum/: Cargo.toml
src/: lib.rs  session_description.rs
src/sdp/: attribute.rs  bandwidth.rs  connection.rs  email_address.rs  encryption_key.rs  media_description.rs  mod.rs  origin.rs  phone_number.rs  session_description.rs  session_information.rs  session_name.rs  time_description.rs  time_zone.rs  uri.rs  version.rs
stun/: Cargo.toml
stun/simplified-enum/src/: lib.rs
stun/src/: lib.rs
stun/src/attribute/: comprehension_optional.rs  error_code.rs  fingerprint.rs  message_integrity.rs  mod.rs  priority.rs  use_candidate.rs  username.rs  xor_mapped_address.rs
webrtc/: Cargo.toml
webrtc/src/: lib.rs  main.rs
