[package]
name = "ice"
version = "0.1.0"
authors = ["mchlrhw <4028654+mchlrhw@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fehler = "1.0"
log = "0.4"
rand = "0.7"
pnet = "0.26"
sdp = { path = "../sdp" }
stun = { path = "../stun" }
thiserror = "1.0"
