[package]
name = "ice"
version = "0.1.0"
authors = ["mchlrhw <4028654+mchlrhw@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fehler = "1.0"
log = "0.4"
nom = "6.0"
nom_locate = "3.0"
pnet = "0.27"
rand = "0.8"
sdp = { path = "../sdp" }
stun = { path = "../stun" }
thiserror = "1.0"
tokio = { version = "1.0", features = ["net"] }
