[package]
name = "stun"
version = "0.1.0"
authors = ["mchlrhw <4028654+mchlrhw@users.noreply.github.com>"]
edition = "2018"

[dependencies]
crc = "2.0"
fehler = "1.0"
impl-enum = "0.2"
nom = "6.0"
num_enum = "0.5"
rand = "0.8"
rust-crypto = "0.2"
simplified-enum = { path = "./simplified-enum" }
thiserror = "1.0"
