[package]
name = "webrtc"
version = "0.1.0"
authors = ["mchlrhw <4028654+mchlrhw@users.noreply.github.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1.6", features = ["attributes"] }
base64 = "0.12.0"
env_logger = "0.7.1"
ice = { path = "../ice" }
log = "0.4.7"
rand = "0.7.0"
sdp = { path = "../sdp" }
pnet = "0.26.0"
