[package]
name = "webrtc"
version = "0.1.0"
authors = ["mchlrhw <4028654+mchlrhw@users.noreply.github.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.37"
base64 = "0.13.0"
env_logger = "0.8.1"
fehler = "1.0.0"
ice = { path = "../ice" }
log = "0.4.7"
pnet = "0.27.2"
rand = "0.8.0"
sdp = { path = "../sdp" }
tokio = { version = "1.0", features = ["macros", "rt"] }
